fix minor issue, order status input in orders page had too much width

--- a/assets/src/admin/modules/_send-sms-page.scss
+++ b/assets/src/admin/modules/_send-sms-page.scss
@@ -31,7 +31,7 @@ Select2
   min-width: 350px;
 
   &:not(.TB_ajaxContent) {
-    min-width: 395px;
+    min-width: 285px;
   }
 }
 
